# videoScreenshot

./: CMakeLists.txt  README.md
src/: videoScreenshot.cpp
